# alignment-forum-qa-bot

./: .gitignore  .pre-commit-config.yaml  LICENSE  LICENSE.txt  README.md  app.py  example.py  pyproject.toml
.github/workflows/: python-package.yml
docs/: Makefile  conf.py  index.rst  installation.rst  quickstart.rst
docs/api/: boilerplate.rst  boilerplate.subboilerplate.rst  modules.rst
notebook/: retrieval_tfidf.ipynb
src/alignment_forum_qa_bot/: _QABot.py  __init__.py  _version.py  download_nltk_dependencies.py  get_data.py  normalizer.py  parse_af_post_json.py  parse_raw_data.py  retriever.py  train_tfidf.py
src/boilerplate/: _get_hello.py  _version.py
src/boilerplate/subboilerplate/: __init__.py  _get_goodbye.py
tests/: test_get_hello.py  test_subboilerplate_get_goodbye.py
