# Replace every appearance of 'alignment_forum_qa_bot' with package name.

[build-system]
requires = [
    "setuptools>=64",
    "setuptools_scm[toml]>=6.2" # For version numbers from git.
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
namespaces = true

[tool.setuptools_scm]
write_to = "src/alignment_forum_qa_bot/_version.py"

[tool.ruff]
line-length = 120

[project]
name = "package-alignment-forum-qa-bot"
dynamic = ["version"]
description = "Wrangling AF into a nice form for forecasters."
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "tqdm>=4.64.1",
    "requests==2.28.2",
    "openai==0.26.5",
    "python-dotenv==0.21.1",
    "pandas==1.5.3",
    "beautifulsoup4==4.11.2",
    "nltk==3.8.1",
    "scikit-learn==1.2.1",
    "pyarrow==11.0.0"
]

[project.optional-dependencies]
develop = [
    "pytest",
    "pytest-cov",
    "black>=22.3.0",
    "pre-commit>=2.20.0",
    "ruff",
    "furo>=2022.12.7",
    "build>=0.10.0" 
]
